# Helsinki-Travel-Time-Matrices

./: .gitignore  .gitmodules  .gitupstream  Dockerfile  README.md  build-and-run.sh  docker-compose.yml  r5py.yml
data/: travel_time_matrix_computer.yml
python-packages/car_speed_annotator/: CHANGELOG.md  pyproject.toml
python-packages/car_speed_annotator/src/car_speed_annotator/: __init__.py  car_speed_annotator.py  speed_coefficients.py  ykr_vyohykkeet.py
python-packages/car_speed_annotator/src/car_speed_annotator/data/: README.md
python-packages/cycling_speed_annotator/: pyproject.toml
python-packages/cycling_speed_annotator/src/cycling_speed_annotator/: __init__.py  cycling_speed_annotator.py
python-packages/parking_times_calculator/: pyproject.toml
python-packages/parking_times_calculator/src/parking_times_calculator/: __init__.py  municipalities.py  parking_times_calculator.py  ykr_vyohykkeet.py
python-packages/parking_times_calculator/src/parking_times_calculator/data/: README.md
python-packages/travel_time_matrix_computer/: pyproject.toml
python-packages/travel_time_matrix_computer/src/travel_time_matrix_computer/: __init__.py  __main__.py  base_travel_time_matrix_computer.py  car_travel_time_matrix_computer.py  cycling_travel_time_matrix_computer.py  multitemporal_travel_time_matrix_computer_mixin.py  public_transport_travel_time_matrix_computer.py  travel_time_matrix_computer.py  travel_time_matrix_computer.yml.template  travel_time_matrix_output_saver.py  walking_travel_time_matrix_computer.py
scripts/: 10-base-system.sh  20-install-and-test-r5py.sh  30-install-local-python-packages.sh  99-cleanup.sh  prepare-system.sh
