[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "cycling_speed_annotator"
description = "Add custom tags to OSM extracts for DGL’s travel time matrices"
readme = "README.md"

authors = [
    { name = "Christoph Fink", email = "christoph.fink@helsinki.fi" },
]

dependencies = [
    "osmium",
    "pandas",
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["transport", "routing", "research", "cycling"]
license = {text = "GPL-3.0-or-later"}

dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-lazy-fixture"]

[project.urls]
Repository = "https://github.com/DigitalGeographyLab/Helsinki-Travel-Time-Matrices.git"
"Bug tracker" = "https://github.com/DigitalGeographyLab/Helsinki-Travel-Time-Matrices/issues"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler --cov --cov-report term-missing"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
version = {attr = "cycling_speed_annotator.__version__"}
