[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "parking_times_calculator"
description = "Calculate parking times depending on destination location within Finland"
readme = "README.md"

authors = [
    { name = "Christoph Fink", email = "christoph.fink@helsinki.fi" },
]

dependencies = [
    "geopandas",
    "shapely"
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["transport", "routing", "research", "car"]
license = {text = "GPL-3.0-or-later"}

dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-lazy-fixture"]

[project.urls]
Repository = "https://github.com/DigitalGeographyLab/Helsinki-Travel-Time-Matrices.git"
"Bug tracker" = "https://github.com/DigitalGeographyLab/Helsinki-Travel-Time-Matrices/issues"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler --cov --cov-report term-missing"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
version = {attr = "parking_times_calculator.__version__"}

[tool.setuptools.package-data]
parking_times_calculator = ["data/*"]
